--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styly.CSS">
 </head>
+
 <body>
-<section><h1 class="nadpis">Jan Novák</h1>
-<h3>
-    Grafický designér & vizuální tvůrce
-</h3>
-Zaměřuji se na minimalistický design, práci s typografií a tvorbou vizuální identity značek.</section>
-<section><h2 class="nvm">
-    Dovednosti
-</h2>
-<div>
-    Adobe Illustrator
-</div>
-<div>
-    Adobe Photoshop
-</div>
-<div>
-    Adobe InDesign
-</div>
-<div>
-    HTML/CSS
-</div>
-</section>
-<h2  class="nvm">Portfolio</h2>
-<article>
+    <img src="" alt="">
     <section>
-
+        <h1 class="nadpis">Jan Novák</h1>
+        <h3 class="np">
+            Grafický designér & vizuální tvůrce
+        </h3>
+        <p class="pn">Zaměřuji se na minimalistický design, práci s typografií a tvorbou vizuální identity značek.</p>
     </section>
-     <section>
+    <section>
+        <h2 class="nvm">
+            Dovednosti
+        </h2>
+        <article class="dov">
+            <div class="nost">
+                Adobe Illustrator
+            </div>
+            <div class="nost">
+                Adobe Photoshop
+            </div>
+            <div class="nost">
+                Adobe InDesign
+            </div>
+            <div class="nost">
+                HTML/CSS
+            </div>
+        </article>
+    </section>
+    <h2 class="nvm">Portfolio</h2>
+    <article>
+        <section>
 
-     </section>
-      <section>
+        </section>
+        <section>
 
-      </section>
+        </section>
+        <section>
 
-</article>
+        </section>
 
-<h2 class="nvm">Kontakt</h2>
-E-mail: Jan.Novak@email.com
-Instagram: @Novak.design
-Behance: behance.net/novak
+    </article>
+
+    <h2 class="nvm">Kontakt</h2>
+    E-mail: Jan.Novak@email.com
+    Instagram: @Novak.design
+    Behance: behance.net/novak
 </body>
+
 </html>
