--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
     </article>
 
     <h2 class="nvm">Kontakt</h2>
-    E-mail: Jan.Novak@email.com
-    Instagram: @Novak.design
-    Behance: behance.net/novak
+  <article class="kon">
+<div>E-mail: Jan.Novak@email.com</div>
+    <div>Instagram: <a href="https://www.example.com">@Novak.design</a></div>
+   <div> Behance:<a href="https://www.example.com">behance.net/novak</a> </div>
+  </article>
+  
+    
 </body>
 
 </html>
