--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <img src="" alt="">
+  <div class="md"> <img src="" alt=""></div> 
     <section>
         <h1 class="nadpis">Jan Novák</h1>
         <h3 class="np">
             Grafický designér & vizuální tvůrce
         </h3>
-        <p class="pn">Zaměřuji se na minimalistický design, práci s typografií a tvorbou vizuální identity značek.</p>
+        <p class="pn">Zaměřuji se na minimalistický design, práci s <br>
+             typografií a tvorbou vizuální identity značek.</p>
     </section>
     <section>
         <h2 class="nvm">
@@ -38,14 +39,20 @@
     </section>
     <h2 class="nvm">Portfolio</h2>
     <article>
-        <section>
-
+        <section class="box">
+<h3>Logo pro kavárnu </h3>
+<img src="" alt="">
+Jednoduché a moderní logo pro lokální podnik
         </section>
-        <section>
-
+        <section class="box">
+<h3>Plakát na kulturní akci </h3>
+<img src="" alt="">
+Výrazná barevnost a typografická kompozice.
         </section>
-        <section>
-
+        <section class="box">
+<h3>Obálka knihy </h3>
+<img src="" alt="">
+Stylizovaná ilustrace a práce s kontrastem.
         </section>
 
     </article>
