--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h3 class="np">
             Grafický designér & vizuální tvůrce
         </h3>
-        <p class="pn">Zaměřuji se na minimalistický design, práci s <br>
+        <p class="pn">Zaměřuji se na minimalistický design, práci s 
              typografií a tvorbou vizuální identity značek.</p>
     </section>
-    <section>
+    <section class="idk">
         <h2 class="nvm">
             Dovednosti
         </h2>
@@ -60,7 +60,7 @@ Stylizovaná ilustrace a práce s kontrastem.
     <h2 class="nvm">Kontakt</h2>
   <article class="kon">
 <div>E-mail: Jan.Novak@email.com</div>
-    <div>Instagram: <a href="https://www.example.com">@Novak.design</a></div>
+    <div class="kk">Instagram: <a href="https://www.example.com">@Novak.design</a></div>
    <div> Behance:<a href="https://www.example.com">behance.net/novak</a> </div>
   </article>
   
