--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <div class="md"> <img src="" alt=""></div> 
+    <article class="nad">
+        <div class="md"> <img src="med.jpg" alt=""></div> 
     <section>
         <h1 class="nadpis">Jan Novák</h1>
         <h3 class="np">
@@ -17,7 +18,8 @@
         </h3>
         <p class="pn">Zaměřuji se na minimalistický design, práci s 
              typografií a tvorbou vizuální identity značek.</p>
-    </section>
+    </section></article>
+  
     <section class="idk">
         <h2 class="nvm">
             Dovednosti
@@ -40,8 +42,8 @@
     <h2 class="nvm">Portfolio</h2>
     <article>
         <section class="box">
+        <div class="pic"> <img src="" alt=""></div>   
 <h3>Logo pro kavárnu </h3>
-<img src="" alt="">
 Jednoduché a moderní logo pro lokální podnik
         </section>
         <section class="box">
